[gd_scene load_steps=2 format=3 uid="uid://dqplbrn5627"]

[ext_resource type="Script" path="res://scripts/stopwatch_manager.gd" id="1_an5yr"]

[node name="StopwatchManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an5yr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ActiveTimer" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "00:00:00"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartPause" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start/Pause
"

[node name="Stop" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stop"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartPause" to="." method="_on_start_pause_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
